Fix contrast in dark mode text

--- a/src/sass/common/_themes.scss
+++ b/src/sass/common/_themes.scss
@@ -32,7 +32,7 @@
   --secondary-foreground-color: #fff;
   --primary-subtle-color: #2c2fe6;
   --secondary-subtle-color: #141920;
-  --titles-color: #fff !important;
+  --titles-color: #FFFFFF !important;
   --link-color: #b6b7f6;
   --primary-border-color: #1d1d1d;
   --secondary-border-color: #0f0f0f;
